--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(nmea_navsat_driver)
 
-if (NOT CATKIN_ENABLE_TESTING)
-  find_package(catkin REQUIRED COMPONENTS
-  )
-endif()
-if (CATKIN_ENABLE_TESTING)
-  find_package(catkin REQUIRED COMPONENTS
-    catkin_virtualenv
-  )
-endif()
+#if (NOT CATKIN_ENABLE_TESTING)
+#  find_package(catkin REQUIRED COMPONENTS
+#  )
+#endif()
+#if (CATKIN_ENABLE_TESTING)
+#  find_package(catkin REQUIRED COMPONENTS
+#    catkin_virtualenv
+#  )
+#endif()
 
 catkin_python_setup()
 catkin_package()
@@ -33,22 +33,22 @@ install(FILES
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-if (CATKIN_ENABLE_TESTING)
-  catkin_generate_virtualenv(
-    PYTHON_INTERPRETER python3
-  )
-
-  catkin_add_nosetests(
-    test/test_driver.py
-    DEPENDENCIES ${${PROJECT_NAME}_EXPORTED_TARGETS} ${PROJECT_NAME}_generate_virtualenv
-  )
-
-  catkin_install_python(
-    PROGRAMS
-      test/test_driver.py
-    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
-
-  find_package(roslint REQUIRED)
-  roslint_python()
-  roslint_add_test()
-endif()
+# if (CATKIN_ENABLE_TESTING)
+#   catkin_generate_virtualenv(
+#     PYTHON_INTERPRETER python3
+#   )
+# 
+#   catkin_add_nosetests(
+#     test/test_driver.py
+#     DEPENDENCIES ${${PROJECT_NAME}_EXPORTED_TARGETS} ${PROJECT_NAME}_generate_virtualenv
+#   )
+# 
+#   catkin_install_python(
+#     PROGRAMS
+#       test/test_driver.py
+#     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+# 
+#   find_package(roslint REQUIRED)
+#   roslint_python()
+#   roslint_add_test()
+# endif()
