--- a/config/nmea_serial_driver.yaml
+++ b/config/nmea_serial_driver.yaml
@@ -1,7 +1,9 @@
 nmea:
   ros__parameters:
-    port: "/dev/ttyUSB1"
+    port: "/dev/ttyUSB0"
     baud: 115200
     frame_id: "gps_link"
     time_ref_source: "gps_link"
+    socket_host: 127.0.0.1
+    socket_port: 2789
     useRMC: False
