--- a/config/nmea_serial_driver.yaml
+++ b/config/nmea_serial_driver.yaml
@@ -1,6 +1,6 @@
 nmea:
   ros__parameters:
-    port: "/dev/unicore_um982"
+    port: "/dev/unicore"
     baud: 115200
     frame_id: "gps_link"
     time_ref_source: "gps_link"
